--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: li
+author: li qian tay
 email: liqian.tay@research.uwa.edu.au
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+description: 
+  personal site.
+baseurl: ""  
+url: ""  
 twitter_username: liqiantay
 github_username:  liqiantay
 
@@ -33,7 +32,16 @@ github_username:  liqiantay
 remote_theme: riggraz/no-style-please
 plugins:
   - jekyll-feed
-
+  
+theme_config:
+  appearance: "auto" # can be "light", "dark" or "auto"
+  back_home_text: ".." # customize text for homepage link in post layout
+  date_format: "%Y-%m-%d" # customize how date is formatted
+  show_description: false # show blog description in home page
+  
+sass:
+  style: :compressed
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
