--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: li
+title: li's personal page
 author: li qian tay
 email: liqian.tay@research.uwa.edu.au
 description: 
