--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 entries:
-  - title: about
+  - title: about me
     entries:
       - title: currently a phd student at the university of western australia
       - title: "interests: misinformation, causal inference, NLP/NLG, ABM, chess, schitt's creek, and <a href='https://www.instagram.com/greyandmama/'>grey/a>"
