--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@ entries:
   - title: about me
     entries:
       - title: currently a phd student at the university of western australia
-      - title: "interests: misinformation, causal inference, NLP/NLG, ABM, chess, schitt's creek, and <a href='https://www.instagram.com/greyandmama/'>grey/a>"
+      - title: "misinformation, causal inference, NLP/NLG, ABM, chess, schitt's creek, <a href='https://www.instagram.com/greyandmama/'>grey</a>"
 
   - title: all posts
     post_list:
