--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ plugins:
 theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: "..." # customize text for homepage link in post layout
-  date_format: "%d-%m-%Y" # customize how date is formatted
+  date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
   
 sass:
