--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,6 +4,6 @@ entries:
       - title: currently a phd student at the university of western australia
       - title: "misinformation, causal inference, NLP/NLG, ABM, chess, schitt's creek, <a href='https://www.instagram.com/greyandmama/'>grey</a>"
 
-  - title: posts
+  - title: all posts
     post_list: true
       
