--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,14 @@ theme_config:
 sass:
   style: :compressed
   
+markdown: kramdown
+highlighter: rouge
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
