--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,7 +3,7 @@ entries:
     entries:
       - title: currently a phd student at the university of western australia
       - title: "misinformation, causal inference, NLP/NLG, ABM, chess, schitt's creek, <a href='https://www.instagram.com/greyandmama/'>grey</a>"
-      - title: "<a href='https://liqiantay.github.io/books'> reading list </a>
+      - title: "<a href='https://liqiantay.github.io/books'>books</a>
       - title: "<a href='mailto:liqian.tay@research.uwa.edu.au'>email</a>, <a href='https://twitter.com/LiQianTay'>twitter</a>, <a href='https://www.linkedin.com/in/liqiantay/'>linkedin</a>"
 
   - title: all posts
