--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: ""
 url: ""  
 twitter_username: liqiantay
 github_username:  liqiantay
+disclaimer: I'm just thinking outloud; everything you see is a work in progress.  
 
 # Build settings
 remote_theme: riggraz/no-style-please
