--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter_username: liqiantay
 github_username:  liqiantay
 
 # Build settings
-remote_theme: riggraz/no-style-please
+remote_theme: 
 plugins:
   - jekyll-feed
   
